# durag

./: README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
docs/source/: api-reference.rst  conf.py  configuration.rst  contributing.rst  getting-started.rst  index.rst  providers.rst  vector-stores.rst
durag/: __init__.py  exceptions.py
durag/configs/: base.py
durag/embeddings/: aws_bedrock.py  azure_openai.py  base.py  fastembed.py  gemini.py  huggingface.py  langchain.py  lmstudio.py  mock.py  ollama.py  openai.py  together.py  vertexai.py
durag/llms/: anthropic.py  aws_bedrock.py  azure_openai.py  azure_openai_structured.py  base.py  deepseek.py  gemini.py  groq.py  langchain.py  litellm.py  lmstudio.py  minimax.py  ollama.py  openai.py  openai_structured.py  sarvam.py  together.py  vllm.py  xai.py
durag/memory/: main.py  setup.py  telemetry.py  utils.py
durag/reranker/: __init__.py  cohere_reranker.py  huggingface_reranker.py  llm_reranker.py  sentence_transformer_reranker.py  zero_entropy_reranker.py
durag/utils/: entity_extraction.py  factory.py  lemmatization.py  scoring.py  spacy_models.py
durag/vector_stores/: azure_ai_search.py  azure_mysql.py  baidu.py  base.py  cassandra.py  chroma.py  configs.py  databricks.py  elasticsearch.py  faiss.py  (+16 more)
tests/: conftest.py  test_chatty_llm_parsing.py  test_client.py  test_client_feedback.py  test_main.py  test_memory.py  test_memory_integration.py  test_project.py  test_proxy.py  test_server_auth.py  test_server_params.py  test_telemetry.py  test_telemetry_aliasing.py  test_telemetry_sampling.py
(+97 files in other folders)
