[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "durag"
version = "2.0.5"
description = "Du-RAG: Durable RAG — persistent memory for AI agents"
authors = [
    { name = "Samuel Kalu", email = "kalusam619@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic>=2.7.3",
    "openai>=1.90.0",
]

[project.optional-dependencies]
local = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
]

test = [
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
]
dev = [
    "ruff>=0.6.5",
]

[project.urls]
Homepage = "https://github.com/eskayML/durag"
Repository = "https://github.com/eskayML/durag"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build]
include = [
    "durag/**/*.py",
]
exclude = [
    "**/*",
    "!durag/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["durag"]
only-include = ["durag"]

[tool.hatch.envs.default.scripts]
format = [
    "ruff format",
]
format-check = [
    "ruff format --check",
]
lint = [
    "ruff check",
]
lint-fix = [
    "ruff check --fix",
]
test = [
    "pytest tests/ {args}",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
